[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Background_Menu.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu.png" type="Texture" id=3]
[ext_resource path="res://Style/OPTIONS_MENU.tres" type="StyleBox" id=4]
[ext_resource path="res://Ttf/pixel-unicode-regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/Language/rus2.png" type="Texture" id=6]
[ext_resource path="res://Ttf/07x5-regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sprites/Language/rus.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Language/ua.png" type="Texture" id=9]
[ext_resource path="res://Style/NEW_GAME2.tres" type="StyleBox" id=10]
[ext_resource path="res://Style/NEW_GAME1.tres" type="StyleBox" id=11]
[ext_resource path="res://Scripts/Buttons.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Button2.gd" type="Script" id=13]
[ext_resource path="res://Sprites/TopDonat.png" type="Texture" id=14]
[ext_resource path="res://Music/Button1.wav" type="AudioStream" id=16]
[ext_resource path="res://Music/Button2.wav" type="AudioStream" id=17]
[ext_resource path="res://Sprites/Language/ua2.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0.752941, 0.0784314, 0.0784314, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_color = Color( 0.729412, 0.454902, 0.454902, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 62
outline_size = 2
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 96
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Best_record:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 999.536, -561.806 ), Vector2( 999.536, -60.806 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Best_record:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="StyleBoxFlat" id=8]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="DynamicFont" id=9]
size = 31
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background_Menu" type="Sprite" parent="."]
position = Vector2( 1270.03, 714.745 )
scale = Vector2( 1.0968, 1.11519 )
texture = ExtResource( 2 )

[node name="Menu" type="Sprite" parent="."]
position = Vector2( 1299.39, 720.754 )
scale = Vector2( 1.57529, 1.88574 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 2394.75
margin_top = 1374.61
margin_right = 2494.75
margin_bottom = 1394.61
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.984314, 0.968627, 0.0313726, 1 )
text = "ver 1.3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Button" parent="."]
margin_left = 1033.0
margin_top = 812.0
margin_right = 1524.0
margin_bottom = 926.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 11 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons"]
margin_left = 73.4916
margin_top = 29.4983
margin_right = 462.492
margin_bottom = 99.4983
custom_colors/font_color = Color( 0.729412, 0.454902, 0.454902, 1 )
custom_fonts/font = SubResource( 1 )
text = "NEW GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Buttons"]
stream = ExtResource( 16 )

[node name="Labelrus" type="Label" parent="Buttons"]
visible = false
margin_left = 35.2145
margin_top = 0.949097
margin_right = 753.214
margin_bottom = 158.949
custom_colors/font_color = Color( 0.729412, 0.454902, 0.454902, 1 )
custom_colors/font_outline_modulate = Color( 0.729412, 0.454902, 0.454902, 1 )
custom_fonts/font = SubResource( 2 )
text = "НАЧАТЬ ИГРУ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 1033.0
margin_top = 965.331
margin_right = 1524.0
margin_bottom = 1079.33
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 11 )
script = ExtResource( 13 )

[node name="Label" type="Label" parent="Button2"]
margin_left = 73.2028
margin_top = 29.6158
margin_right = 462.203
margin_bottom = 99.6158
custom_colors/font_color = Color( 0.0862745, 0.635294, 0.905882, 1 )
custom_fonts/font = SubResource( 3 )
text = "LEVEL UP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Button2"]
stream = ExtResource( 16 )

[node name="Labelrus" type="Label" parent="Button2"]
visible = false
anchor_left = 0.00342543
anchor_right = 0.00342543
margin_left = 85.4621
margin_top = 1.25732
margin_right = 475.462
margin_bottom = 137.257
custom_colors/font_color = Color( 0.0862745, 0.635294, 0.905882, 1 )
custom_fonts/font = SubResource( 4 )
text = "ПРОКАЧКА"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Best_record" type="TouchScreenButton" parent="."]
position = Vector2( 999.536, -60.806 )
scale = Vector2( 0.676255, 0.630006 )
normal = ExtResource( 14 )
pressed = ExtResource( 14 )

[node name="Label" type="Label" parent="Best_record"]
margin_left = 217.406
margin_top = 409.622
margin_right = 625.406
margin_bottom = 616.622
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = " The best 
 record is"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Best_record"]
stream = ExtResource( 17 )

[node name="Label2" type="Label" parent="Best_record"]
margin_left = 380.067
margin_top = 547.716
margin_right = 788.067
margin_bottom = 754.716
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Best_record"]
margin_left = 309.088
margin_top = 609.62
margin_right = 717.088
margin_bottom = 816.62
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labelrus" type="Label" parent="Best_record"]
visible = false
margin_left = 215.221
margin_top = 392.141
margin_right = 619.221
margin_bottom = 506.141
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Твой рекорд"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3rus" type="Label" parent="Best_record"]
visible = false
margin_left = 328.5
margin_top = 518.314
margin_right = 732.5
margin_bottom = 632.314
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "волн"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2rus" type="Label" parent="Best_record"]
visible = false
margin_left = 383.0
margin_top = 463.0
margin_right = 847.0
margin_bottom = 577.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "intro"
anims/intro = SubResource( 7 )

[node name="Button" type="Button" parent="."]
margin_left = 1151.0
margin_top = 1291.22
margin_right = 1412.0
margin_bottom = 1366.22
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
margin_left = 58.5201
margin_top = 22.653
margin_right = 212.52
margin_bottom = 53.653
custom_fonts/font = SubResource( 9 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labelrus" type="Label" parent="Button"]
visible = false
margin_left = 38.5732
margin_top = 8.34961
margin_right = 268.573
margin_bottom = 72.3496
custom_fonts/font = SubResource( 10 )
text = "НАСТРОЙКИ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RusLng" type="TouchScreenButton" parent="."]
position = Vector2( 905.661, 1260.97 )
scale = Vector2( 0.634, 0.616 )
normal = ExtResource( 8 )
pressed = ExtResource( 6 )

[node name="EngLng" type="TouchScreenButton" parent="."]
position = Vector2( 1481.1, 1265.47 )
scale = Vector2( 0.634, 0.59 )
normal = ExtResource( 9 )
pressed = ExtResource( 18 )

[connection signal="pressed" from="Buttons" to="Buttons" method="_on_Buttons_pressed"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_Button2_pressed"]
[connection signal="released" from="Best_record" to="." method="_on_TopDonater_released"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="released" from="RusLng" to="." method="_on_RusLng_released"]
[connection signal="released" from="EngLng" to="." method="_on_EngLng_released"]
